# tracectrl

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  run-dev-db.ps1  run-dev-db.sh  rustfmt.toml
migrations/: 20231128002944_Create_tables.sql  20231211202232_Add_clients_table_and_clients_logs_join_table.sql  20231214170908_Remove_amount_field_on_backtrace_snippets_table.sql  20231214184759_Add_received_from_column.sql  20231214194516_Add_file_column_to_snippet.sql  20231224012517_Create_tables.sql
src/: error.rs  main.rs  prelude.rs  router.rs  url.rs  ws.rs
src/api/: client.rs  log.rs  mod.rs
src/api/extractors/: client.rs
src/api/types/: backtrace.rs  layer.rs  log.rs  mod.rs  snippet.rs
src/utils/: apidoc.rs  arctex.rs  log_socket.rs  mod.rs  peer_map.rs  url_try_froms.rs  uuid.rs
tc-frontend/: .gitignore  index.html  package.json  vite.config.ts
tc-frontend/src/: App.tsx
tc-frontend/src/components/: header-bar.tsx  logs-area.tsx  logs-provider.tsx  settings-provider.tsx  theme-provider.tsx
tc-frontend/src/components/header-bar/: menu.tsx
tc-frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  checkbox.tsx  command.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  radio-group.tsx  select.tsx  sheet.tsx  slider.tsx  toggle.tsx
tc-frontend/src/lib/: log.ts
