[package]
name = "tracectrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
axum-typed-websockets = "0.5.0"
ctrlc = "3.4.1"
dashmap = "5.5.3"
futures-channel = "0.3.29"
futures-util = "0.3.28"
parking_lot = "0.12.1"
reqwest = "0.11.22"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = { version = "0.1.37", features = ["max_level_trace"] }
tracing-subscriber = "0.3.17"
url = "2.4.1"
