[package]
name = "tracectrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
ctrlc = "3.4.1"
dashmap = "5.5.3"
dotenv = "0.15.0"
futures-channel = "0.3.29"
futures-util = "0.3.28"
parking_lot = "0.12.1"
reqwest = "0.11.22"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid", "migrate"] }
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = { version = "0.1.37", features = ["max_level_trace"] }
tracing-subscriber = "0.3.17"
url = "2.4.1"
utoipa = { version = "4.0.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-redoc = { version = "1.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng"] }
